# src/routes/positionGps.js
@@ -1,11 +1,11 @@
 const express = require('express');
 const router = express.Router();
-const {chauffeurOuAdminMiddleware} = require('../middlewares/auth');
+const {chauffeurOuAdminMiddleware, authMiddleware} = require('../middlewares/auth');
 
 const {postPosition, getLast, getRouteHandler, getRoute} = require('../controllers/positionGPS');
 
 router.post('/', chauffeurOuAdminMiddleware, postPosition);
-router.get('/last/:vehiculeId/', chauffeurOuAdminMiddleware, getLast);
-router.get('/route/:vehiculeId/', chauffeurOuAdminMiddleware, getRouteHandler);
+router.get('/last/:vehiculeId/', authMiddleware, getLast);
+router.get('/route/:vehiculeId/', authMiddleware, getRouteHandler);
 
 module.exports = router;
